--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,7 +49,9 @@ target_link_directories(${CMAKE_PROJECT_NAME} PRIVATE
 target_sources(${CMAKE_PROJECT_NAME} PRIVATE
     # Add user sources here
     Core/Src/user_main.c
-    Core/Src/hid_descriptor.c
+    Core/Src/usb_reports.c
+    Core/Src/ffb_report_handler.c
+    Core/Src/usb_report_handler.c
 )
 
 # Add include paths
