added nix shell

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,8 @@
         "cstdint": "c",
         "usbd_customhid_if_template.h": "c"
     },
-    "clangd.arguments": ["--query-driver=/usr/bin/arm-none-eabi-gcc"]
+    "clangd.arguments": [
+        "--query-driver=/nix/store/mczmw3rln2jm6nm080dapyjpj3833rg9-gcc-arm-embedded-12.3.rel1/bin/arm-none-eabi-gcc"
+    ],
+    "C_Cpp.intelliSenseEngine": "disabled",
 }
